trying more overflow prevention

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,11 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
+html, body {
+	max-width: 100%;
+	overflow-x: hidden;
+	}
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
